# verilator-template

./: .gitignore  CMakeLists.txt  README.md  cmd_aliases  sim_main.cpp
sim/: DUT.hpp  main.cpp
src/: top.sv
